<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_app">Movie</string>
    <string name="movie_poster_description">movie_poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="error_text">An error occurred while loading data. Please try again.</string>
    <string name="see_all">See All</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="play">Play</string>
    <string name="overview">Overview</string>
    <string name="casts">Casts</string>
    <string name="movie_backdrop">movie backdrop</string>
</resources>