<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/black"
            app:contentScrim="@color/yellow"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleTextColor="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleCollapseMode="fade">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_color">

                <ImageView
                    android:id="@+id/img_movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:foreground="@drawable/gradient_color"
                    android:scaleType="centerCrop"
                    android:src="@color/yellow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    style="@style/TextBoldTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="50dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_movie_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="DUNE" />

                <TextView
                    android:id="@+id/tv_movie_release_genre_runtime"
                    style="@style/TextLightTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_movie_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="2020 - Action, Fantastic - 2h 46m" />

                <ProgressBar
                    android:id="@+id/progress_movie_release_genre_runtime"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_movie_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_error_movie_release_genre_runtime"
                    style="@style/TextLightTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/error_text"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_movie_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="test"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <Button
                android:id="@+id/btn_play"
                style="@style/TextBoldTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/play"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextBoldTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/overview"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_play" />

            <TextView
                android:id="@+id/tv_overview_detail"
                style="@style/TextLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="15dp"
                android:justificationMode="inter_word"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                tools:text="@string/see_all" />

            <TextView
                android:id="@+id/tv_cast"
                style="@style/TextBoldTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/casts"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_detail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast" />

            <ProgressBar
                android:id="@+id/progress_cast"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

            <TextView
                android:id="@+id/tv_error_cast"
                style="@style/TextLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast"
                tools:text="@string/error_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>